--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@mui/icons-material": "^6.1.0",
     "@mui/material": "^6.1.0",
     "atomicfront": "file:",
+    "i18next": "^23.15.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.2",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
