--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mui/material": "^6.1.0",
     "animate.css": "^4.1.1",
     "atomicfront": "file:",
+    "emailjs": "^4.0.3",
+    "emailjs-com": "^3.2.0",
     "i18next": "^23.15.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
