--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,41 +1,46 @@
+name: deploy
 on:
   push:
     branches:
-      - dev  
-
-name: deploy
+      - dev
 
 jobs:
   deploy:
     name: deploy cloud run
     runs-on: ubuntu-latest
-
+    
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.LOGIN }}
 
       - name: Build and push to GitHub Packages
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v5
         with:
+          context: .
           push: true
           tags: ghcr.io/francorutigliano/at3-front:prod
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
           
       - name: SSH and run command
         uses: appleboy/ssh-action@v0.1.3
         with:
-             host: ${{ secrets.SSH_HOST }}
-             port: ${{ secrets.SSH_PORT }}
-             username: ${{ secrets.SSH_USERNAME }}
-             password: ${{ secrets.SSH_PASSWORD }}
-             script: |
-               
-               echo "Conexión SSH exitosa"
-
-               /scriptsv2/deploy_front.sh
+          host: ${{ secrets.SSH_HOST }}
+          port: ${{ secrets.SSH_PORT }}
+          username: ${{ secrets.SSH_USERNAME }}
+          password: ${{ secrets.SSH_PASSWORD }}
+          script: |
+            echo "Iniciando despliegue..."
+            /scriptsv2/deploy_front.sh
+            echo "Despliegue completado"
                
